working on placing order 3.0

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 NEXT_PUBLIC_HOST="http://localhost:3001"
+NEXT_PUBLIC_APP_ID="1854106"
+NEXT_PUBLIC_KEY="bb6d81524b018fdf9ae5"
+NEXT_PUBLIC_SECRET="b88c4c72cf93763e1fad"
+NEXT_PUBLIC_CLUSTER="ap2"
