working on integration of oms

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ NEXT_PUBLIC_APP_ID="1854106"
 NEXT_PUBLIC_KEY="bb6d81524b018fdf9ae5"
 NEXT_PUBLIC_SECRET="b88c4c72cf93763e1fad"
 NEXT_PUBLIC_CLUSTER="ap2"
+NEXT_PUBLIC_ABLY_API_KEY="JzLxgw.fVrfBg:nnd88FOH6nfhxKdyAqoQXglWw1Rg-d1wFjygESFXm8I"
